<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="ashishpatil.androidtest.view.Portrait_Dashboard">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <include layout="@layout/title" />

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_background"
                android:orientation="vertical">

                <include layout="@layout/divice_layout" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_button"
                        android:text="@string/connected"
                        android:textColor="@color/green" />

                    <ImageView
                        android:id="@+id/battery_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:contentDescription=""
                        android:src="@drawable/ic_battery_80_black_24dp" />

                    <TextView
                        android:id="@+id/battery_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/_90"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:contentDescription=""
                        android:src="@drawable/ic_bluetooth_black_24dp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_swap_horiz_black_24dp" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/vitals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="3dp"
                        android:text="@string/vital"
                        android:textColor="@color/black"
                        android:textSize="24sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription=""
                            android:src="@drawable/ic_directions_walk_black_24dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/walking"
                            android:textColor="@color/black"
                            android:textSize="23sp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:contentDescription=""
                            android:src="@drawable/ic_favorite_border_black_24dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/heart_rate"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/rate"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingEnd="5dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_access_time_black_24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/last_taken" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="40dp"
                            android:background="@drawable/bg_take_hr"
                            android:text="@string/btn_take_hr"
                            android:textColor="@color/white" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:paddingEnd="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginStart="15dp"
                            android:contentDescription=""
                            android:src="@drawable/ic_weather" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/respiration"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/brpm"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:paddingEnd="10dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginStart="15dp"
                            android:contentDescription=""
                            android:src="@drawable/ic_temprature" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="1dp"
                            android:text="@string/skin_temprature"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/temp"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:paddingEnd="10dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginStart="15dp"
                            android:contentDescription=""
                            android:src="@drawable/ic_steps" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/steps"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/_7896"
                            android:textColor="@color/black"
                            android:textSize="18sp" />


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>
